# optimix

./: .appveyor.yml  .gitignore  .travis.yml  LICENSE.md  MANIFEST.in  README.md  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: release.yml  test.yml
doc/: Makefile  conf.py  environment.yml  function.rst  index.rst  install.rst  installation.rst  make.bat  optimize.rst  quick-start.rst  tutorial.rst  types.rst  variables.rst
doc/_build/doctrees/: environment.pickle  function.doctree  index.doctree  install.doctree  optimize.doctree  quick-start.doctree  types.doctree  variables.doctree
doc/_build/html/: .buildinfo  function.html  genindex.html  index.html  install.html  objects.inv  optimize.html  py-modindex.html  quick-start.html  search.html  searchindex.js  types.html  variables.html
doc/_build/html/_modules/: index.html
doc/_build/html/_sources/: function.rst.txt  index.rst.txt  optimize.rst.txt  types.rst.txt  variables.rst.txt
examples/: minimal_double_scalar1.py  minimal_single_scalar1.py  minimal_single_scalar2.py
optimix/: __init__.py  _check_grad.py  _exception.py  _func_opt.py  _function.py  _testing.py  _testit.py  _types.py  _unicode.py  _variables.py  check_grad.py  exception.py  func.py  function.py  learnable.py  negative.py  testing.py  types.py  util.py  variables.py
optimix/_optimize/: __init__.py  _bfgs.py  _brent.py
optimix/_test/: test_func.py  test_function.py  test_function_variables.py  test_testing.py  test_types.py  test_variables.py
optimix/optimize/: __init__.py  bfgs.py  brent.py  exception.py  tnc.py
optimix/test/: funcs_testing.py  quadratic_function_reduces.py  quadratic_functions.py  test_check_grad.py  test_function.py  test_function_optimization.py  test_function_variables.py  test_layout.py  test_layout_reduce.py  test_testing.py  test_types.py  test_usage.py  test_variables.py  tmp.py  vector_valued_functions.py
tests/: test_function.py  test_types.py
