[tool.poetry]
name = "optimix"
version = "3.0.5"
description = "Abstract function optimisation"
authors = ["Danilo Horta <danilo.horta@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
scipy = "^1.15.0"
brent-search = "^2.0.2"
ndarray-listener = "^2.0.2"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
