[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Abstract function optimisation
download_url = https://github.com/limix/optimix
keywords = function, optimisation
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = optimix
url = https://github.com/limix/optimix
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=3.0
install_requires =
    brent-search>=1.0.31
    ndarray-listener>=1.1.0
    numpy>=1.14.0
    pandas>=0.22
    pytest>=3.2.5
    scipy>=1.0.0
    tqdm>=4.19.5

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject .pytest_cache
pep8ignore = E402

[flake8]
ignore = E501 E741 E203