[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Abstract function optimisation
download_url = https://github.com/limix/optimix
keywords = function, optimisation
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = optimix
url = https://github.com/limix/optimix
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    brent-search>=1.0.33
    ndarray-listener>=1.1.2
    numpy>=1.14.5
    pytest>=3.6.2
    scipy>=1.1.0
    tqdm>=4.23.4

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject .pytest_cache
pep8ignore = E402

[flake8]
ignore = E501 E741 E203