[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Abstract function optimisation
download_url = https://github.com/limix/optimix
keywords = function, optimisation
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = optimix
url = https://github.com/limix/optimix
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    brent-search>=2.0.1
    ndarray-listener>=2.0.1
    numpy>=1.14.3
    pytest>=6.0.0
    scipy>=1.0.1
    tqdm>=4.23.4

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject .pytest_cache

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[flake8]
ignore = E501,E741,E203,W503,W0212,W0622,R0915,E743

[pycodestyle]
ignore = E226,E302,E41,W292
max-line-length = 88
